# Scaled-Robot-Cars

Build instruction/: BOM.xlsx  Documentation.docx  budget.xlsx
code/Arduino interface/ServoControl1/: ServoControl1.ino
code/Arduino interface/ServoControl2/: ServoControl2.ino
code/Arduino interface/_9DoF_Razor_M0_Firmware/: _9DoF_Razor_M0_Firmware.ino
code/Arduino interface/_9DoF_Razor_M0_Firmware_ROS/: config.h
code/ubuntu/RC1/um_acc/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  experiment_um.launch  setup.launch
code/ubuntu/RC1/um_acc/arduino/carcontrol_servo/: carcontrol_servo.ino
code/ubuntu/RC1/um_acc/arduino/distance_sensor_publisher/: distance_sensor_publisher.ino
code/ubuntu/RC1/um_acc/camera_calibration/: VID5.xml  test.cpp
code/ubuntu/RC1/um_acc/catkin_generated/: generate_cached_setup.py  pkg.installspace.context.pc.py  setup_cached.sh
code/ubuntu/RC1/um_acc/catkin_generated/installspace/: um_acc-msg-extras.cmake  um_acc.pc  um_accConfig.cmake
code/ubuntu/RC1/um_acc/catkin_generated/stamps/um_acc/: package.xml.stamp
code/ubuntu/RC1/um_acc/cudd-2.5.0/: Makefile
code/ubuntu/RC1/um_acc/devel/: .catkin  .rosinstall  setup.sh
code/ubuntu/RC1/um_acc/devel/include/um_acc/: CarSignal.h  CarState.h  CarStateExtended.h  CarState_L.h  ComputeControl_L.h  ControlSignal.h  Pwm.h  Sensor.h
code/ubuntu/RC1/um_acc/devel/share/um_acc/cmake/: um_acc-msg-paths.cmake  um_accConfig.cmake
code/ubuntu/RC1/um_acc/gtest/: CTestTestfile.cmake
code/ubuntu/RC1/um_acc/msg/: CarState.msg  CarState_L.msg  CentralSignal.msg  Lidar_data.msg
code/ubuntu/RC1/um_acc/samples/cpp/tutorial_code/calib3d/camera_calibration/: camera_calibration
code/ubuntu/RC1/um_acc/samples/gpu/: houghlines
code/ubuntu/RC1/um_acc/src/: ACC_MPC.cpp  CC_MPC.cpp  Car_parameters.cpp  Car_parameters.h  Car_test.cpp  IMU_talker.cpp  LK_MPC.cpp  Lidar_filter.cpp  Motor.cpp  camera.cpp  ccsolver.cpp  ccsolver.h  central_controller.py  control_interface.cpp  experiment.cpp  getLatDynMat.py  gui.cpp  kalman.cpp  lane_publisher.cpp  lane_publisher_old.cpp  manual_gui.cpp  output_file.txt  rc_interface.cpp  remote_car.cpp  situation1.cpp  slam.py
code/ubuntu/RC1/um_acc/srv/: ComputeControl_L.srv
code/ubuntu/RC2/: RC_setup.bash  localize_RC_setup.bash  slam_RC_setup.bash
code/ubuntu/RC2/um_acc/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  package.xml  setup.launch  setup.launch~  setup.py  setup_localize.launch  setup_localize.launch~  setup_localize_lab.launch  setup_slam.launch  sim_AMCL_slam.launch  sim_slam.launch
code/ubuntu/RC2/um_acc/Legend code/: CMakeLists.txt  arduino.launch  experiment_ucla.launch  simulation.launch
code/ubuntu/RC2/um_acc/Legend code/arduino/: readme.md
code/ubuntu/RC2/um_acc/Legend code/arduino/carcontrol_manual/: carcontrol_manual.ino
code/ubuntu/RC2/um_acc/Legend code/camera_calibration/: out_camera_data.xml  take_picture  take_picture.cpp
code/ubuntu/RC2/um_acc/Legend code/msg/: CarSignal.msg  CarStateExtended.msg  Lane.msg  Pwm.msg  Sensor.msg
code/ubuntu/RC2/um_acc/Legend code/src/: Car_1.cpp  Car_2.cpp  Car_3.cpp  Car_4.cpp  Car_id.cpp  SimpleGPIO.cpp  SimpleGPIO.h  SimplePWM.cpp  SimplePWM.h  car_data.cpp  car_simulator.cpp  car_simulator_lanekeeping.cpp  compute_control_ucla.cpp  controller_lanekeeping.cpp  eiquadprog.hpp  qp_vars.cpp  qp_vars.h  qphelper.cpp  qphelper.h
code/ubuntu/RC2/um_acc/catkin_generated/: ordered_paths.cmake  package.cmake  pkg.develspace.context.pc.py  um_acc-msg-extras.cmake.develspace.in
code/ubuntu/RC2/um_acc/catkin_generated/installspace/: um_acc-msg-paths.cmake
code/ubuntu/RC2/um_acc/cmake/: um_acc-genmsg-context.py  um_acc-genmsg.cmake
code/ubuntu/RC2/um_acc/cudd-2.5.0/nanotrav/: nanotrav
code/ubuntu/RC2/um_acc/devel/: _setup_util.py
code/ubuntu/RC2/um_acc/devel/include/um_acc/: ComputeControl.h  ComputeControlRequest.h  ComputeControlResponse.h  ComputeControl_LRequest.h  ComputeControl_LResponse.h  Lane.h
code/ubuntu/RC2/um_acc/devel/lib/pkgconfig/: um_acc.pc
code/ubuntu/RC2/um_acc/gtest/: Makefile
code/ubuntu/RC2/um_acc/msg/: CarState.msg  IMU.msg  Motor_data.msg
code/ubuntu/RC2/um_acc/samples/cpp/: edge
code/ubuntu/RC2/um_acc/src/: ACC_MPC.cpp  CC_MPC.cpp  CC_simple.cpp  Car_parameters.h  IMU_talker.cpp  LK_MPC.cpp  Lidar_filter.cpp  Motor.cpp  Record.cpp  accsolver.cpp  accsolver.h  camcali.cpp  camera.cpp  camera_corridor.cpp  central_controller.py  compute_control_um.cpp  compute_control_um_lanekeeping.cpp  controller.cpp  experiment.cpp  getCarStateDouble.py  getCarStateSingle.py  getLatDynMat.py  kalman.h  lane_publisher.cpp  lane_publisher2.cpp  lane_publisher2.cpp~  lksolver.cpp  lksolver.h  manual_gui.cpp  remote_car.cpp  rs232.cpp  slam.py  teleop_car.cpp  teleop_car_control.cpp  teleop_lanekeeping.cpp  test.cpp
code/ubuntu/RC2/um_acc/srv/: ComputeControl.srv  MPC_ACC.srv  MPC_CC.srv  MPC_LK.srv
hardware/CAD/: Assemble.SLDASM  Elmo.SLDPRT  Elmo.STL  LIDAR.SLDPRT  LIDAR.STL  camera_mount.SLDPRT  camera_mount.STL  door.SLDPRT  door.STL  lowerBase.SLDPRT  lowerBase2.SLDPRT  powerPack.SLDPRT  powerPack.STL  standing.SLDPRT  switch.SLDPRT  switch.STL  upperBase.SLDPRT  upperBase2.SLDPRT  wifi.SLDPRT  wifi.STL
hardware/Elmo driver and Motor/: EAS II Installation Instructions.docx
